<resources>
    <string name="app_name">LetsChat</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="login_name">email: </string>
    <string name="login_pwd">pwd: </string>
    <string name="create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login_success_message">Login Sucess</string>
    <string name="login_fail_message">Login Failed</string>
    <string name="sign_out_success_message">Sign Out Sucess</string>
    <string name="sign_out_fail_message">Sign Out Failed</string>
    <string name="sign_out_confirm">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="title_activity_registration">Registration</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="change_pic">Change pic</string>
    <string name="display_name">Name</string>
    <string name="privacy">By logining in LetsCaht you are agree to TermsCond.</string>
    <string name="title_activity_tab">LetsChat</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>